--- a/Final Lab Exam FA20-BCS-042/package.json
+++ b/Final Lab Exam FA20-BCS-042/package.json
@@ -13,6 +13,7 @@
     "express-ejs-layouts": "^2.5.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "method-override": "^3.0.0",
     "mongoose": "^7.2.2",
     "morgan": "~1.9.1"
   }
